# ux-tool-suite

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  pyproject.toml
docs/: AGENT_PROMPT.md  roadmap.md  sdd.md
files/: ux-suite-BUILD-INSTRUCTIONS-v2.md  ux-suite-BUILD-INSTRUCTIONS.md  ux-suite-GAP-ANALYSIS.md  ux-suite-REMEDIATION-R1.md
internal_ui_stack/: .gitignore  .gitlab-ci.yml  .npmignore  .npmrc  CHANGELOG.md  CLAUDE.md  README.md  components.json  index.html  nx.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.build.json  vite.config.docs.ts  vite.config.ts
internal_ui_stack/scripts/: update-code-blocks.ts
internal_ui_stack/src/: App.tsx  index.css  index.html  index.ts
internal_ui_stack/src/hooks/: use-debounce.ts
internal_ui_stack/src/lib/: utils.ts
reference-lib/: README.md
scripts/: new_concept.py  sync_shared.py
sdaad/: gen-01-readme.md  gen-02-roadmap.md  gen-03-sdd.md  gen-04-agent-prompt.md
shared/docs/: verification-playwright.md
shared/lib/ux_suite/: knowledge.py  workspace.py
shared/schemas/examples/: knowledge-pack.chakra-ui.json  knowledge-pack.shadcn-ui.json
skills/company-ux-builder/: SKILL.md
skills/company-ux-designer/: SKILL.md
skills/company-ux-prototyper/: SKILL.md
skills/generate-knowledge-pack/: SKILL.md
workspaces/data-analytics-dashboard/design/: main-dashboard-mockup.html
workspaces/data-analytics-dashboard/logs/: elicitation.jsonl
workspaces/data-analytics-dashboard/spec/: concept-spec.json
workspaces/settings-panel/design/: settings-mockup.html
(+124 files in other folders)
